--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -68,7 +68,7 @@ abbr[title]{border-bottom:1px dotted}b,strong{font-weight:bold}dfn{font-style:it
 	color:#fff;
 	font-weight:700;
 	text-transform:uppercase;
-	background-color:#0f33ff;
+	background-color:#F57C00;
 	border:none;opacity:0;
 	visibility:hidden;
 	-webkit-transition:opacity .4s ease-in-out,visibility 0s .4s;
